--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
     "name": "zendframework/zend-expressive-swoole",
-    "description": "<package description; should match repository description>",
+    "description": "Swoole support for Expressive",
     "license": "BSD-3-Clause",
     "keywords": [
         "components",
         "zf",
         "zendframework",
-        "<individual keywords for current package>"
+        "expressive",
+        "swoole",
+        "psr-7",
+        "psr-15"
     ],
     "support": {
         "docs": "https://docs.zendframework.com/zend-expressive-swoole/",
@@ -16,8 +19,22 @@
         "chat": "https://zendframework-slack.herokuapp.com",
         "forum": "https://discourse.zendframework.com/c/questions/components"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/ezimuel/zend-diactoros"
+        }
+    ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "ext-swoole": "*",
+        "zendframework/zend-diactoros" : "dev-feature/swoole",
+        "zendframework/zend-expressive" : "^3.0.2",
+        "zendframework/zend-httphandlerrunner": "^1.0.1",
+        "psr/container": "^1.0",
+        "psr/http-message": "^1.0",
+        "psr/http-message-implementation": "^1.0",
+        "psr/http-server-handler": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1.1",
