Expose package to zend-component-installer

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,9 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
+        },
+        "zf": {
+            "config-provider": "Zend\\Expressive\\Swoole\\ConfigProvider"
         }
     },
     "scripts": {
