Added documentation + changed swoole_http_server key in config

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,8 @@ site_dir: docs/html
 pages:
     - index.md
     - Introduction: intro.md
-site_name: Component Name Goes Here
-site_description: 'Component Description goes here'
+    - "How it works": how_it_works.md
+site_name: 'Swoole Expressive'
+site_description: 'Swoole support for Expressive'
 repo_url: 'https://github.com/zendframework/zend-expressive-swoole'
 copyright: 'Copyright (c) 2018 <a href="https://www.zend.com/">Zend Technologies USA Inc.</a>'
