--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,14 @@
     "require": {
         "php": "^7.1",
         "ext-swoole": "*",
-        "zendframework/zend-diactoros" : "^1.8",
-        "zendframework/zend-expressive" : "^3.0.2",
-        "zendframework/zend-httphandlerrunner": "^1.0.1",
+        "dflydev/fig-cookies": "^1.0 || ^2.0",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0",
         "psr/http-message-implementation": "^1.0",
-        "psr/http-server-handler": "^1.0"
+        "psr/http-server-handler": "^1.0",
+        "zendframework/zend-diactoros": "^1.8",
+        "zendframework/zend-expressive": "^3.0.2",
+        "zendframework/zend-httphandlerrunner": "^1.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1.1",
