--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "psr/http-message": "^1.0",
         "psr/http-message-implementation": "^1.0",
         "psr/http-server-handler": "^1.0",
+        "psr/log": "^1.0",
         "zendframework/zend-diactoros": "^1.8",
         "zendframework/zend-expressive": "^3.0.2",
         "zendframework/zend-httphandlerrunner": "^1.0.1"
