Adds documentation of static resource support
Details:

- How it works.
- What features we provide out-of-the-box.
- Accepted configuration, as well as an example of configuration.
- How to write your own middleware, including altering how the content is provided to the response.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,10 @@ site_dir: docs/html
 pages:
     - index.md
     - Introduction: intro.md
-    - Logging: logging.md
-    - "How it works": how_it_works.md
+    - Reference:
+      - "Static Resources": static-resources.md
+      - Logging: logging.md
+      - "How it works": how_it_works.md
 site_name: 'zend-expressive-swoole'
 site_description: 'Swoole support for Expressive'
 repo_url: 'https://github.com/zendframework/zend-expressive-swoole'
