--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "php": "^7.1",
         "ext-swoole": "*",
         "dflydev/fig-cookies": "^1.0 || ^2.0",
+        "ocramius/package-versions": "^1.3",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0",
         "psr/http-message-implementation": "^1.0",
