--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
+/.travis/ export-ignore
 /composer.lock export-ignore
 /docs/ export-ignore
 /mkdocs.yml export-ignore
