--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,9 @@ matrix:
     - php: 7.2
       env:
         - DEPS=latest
+    - php: nightly
+      env:
+        - DEPS=latest
 
 before_install:
   - sh -c "mkdir -p ${TRAVIS_BUILD_DIR}/.travis/module-cache/$(php-config --vernum)"
