Move documentation changes for #40 to v2 docs
Moves the documentation changes made in #40 to the v2 documentation
tree, and restores the v1 docs to their original state.

Also introduces the migration chapter, and adds both the migration and
async-task chapters to the TOC.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,10 @@ pages:
     - Reference:
       - "Static Resources": v2/static-resources.md
       - Logging: v2/logging.md
+      - "Async Tasks": v2/async-tasks.md
       - "How it works": v2/how-it-works.md
       - "Considerations when using Swoole": v2/considerations.md
+      - Migration: v2/migration.md
     - v1:
       - Intro: v1/intro.md
       - Reference:
