Document creating a custom start command
I looked into the possibility of doing a `require` on the existing
`public/index.php` in order to start the server. However, doing so means
we cannot provide runtime options to the Swoole HTTP server instance, as
we would end up with an additional container instance (see `require
'config/container.php` in `public/index.php`) which would in turn have
its own HTTP server instance to which we would have no access.

An alternate plan would be to have a separate bootstrap script similar
to how we do routing and pipelines:

```php
// In something like config/bootstrap.php:
use Psr\Container\ContainerInterface;
use Zend\Expressive\Application;
use Zend\Expressive\MiddlewareFactory;

return function (ContainerInterface $container) : void {
    $app = $container->get(Application::class);
    $factory = $container->get(MiddlewareFactory::class);

    (require 'config/routes.php')($app, $factory, $container);
    (require 'config/pipeline.php')($app, $factory, $container);

    $app->run();
};
```

and then modify `public/index.php` to read:

```php
declare(strict_types=1);

// Delegate static file requests back to the PHP built-in webserver
if (PHP_SAPI === 'cli-server' && $_SERVER['SCRIPT_FILENAME'] !== __FILE__) {
    return false;
}

chdir(dirname(__DIR__));
require 'vendor/autoload.php';

/**
 * Self-called anonymous function that creates its own scope and keep the global namespace clean.
 */
(function () {
    /** @var \Psr\Container\ContainerInterface $container */
    $container = require 'config/container.php';

    (require 'config/bootstrap.php')($container);
})();
```

This approach would be nice, as we could simply say "create a
config/bootstrap.php, and have it return a function that accepts the
container, and in which it creates and runs the application". However,
this would require changes to existing applications, including the
Expressive skeleton.

Interestingly, because we are pulling commands from the container, we
c

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,11 +2,12 @@ docs_dir: docs/book
 site_dir: docs/html
 pages:
     - index.md
-    - Intro: v2/intro.md
+    - Introduction: v2/intro.md
     - Reference:
       - "Static Resources": v2/static-resources.md
       - Logging: v2/logging.md
       - "Async Tasks": v2/async-tasks.md
+      - "Command Line Tooling": v2/command-line.md
       - "How it works": v2/how-it-works.md
       - "Considerations when using Swoole": v2/considerations.md
       - Migration: v2/migration.md
