Compatibility with PHPUnit 8

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
     - php: 7.1
       env:
         - DEPS=locked
-        - LEGACY_DEPS="dflydev/fig-cookies symfony/console"
+        - LEGACY_DEPS="dflydev/fig-cookies phpunit/phpunit symfony/console"
         - CS_CHECK=true
         - TEST_COVERAGE=true
     - php: 7.1
