--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     },
     "require-dev": {
         "filp/whoops": "^2.1",
-        "phpunit/phpunit": "^7.1.1",
+        "phpunit/phpunit": "^7.5.17 || ^8.4.3",
         "zendframework/zend-coding-standard": "~1.0.0",
         "zendframework/zend-servicemanager": "^3.3"
     },
